--- a/debian/Containerfile
+++ b/debian/Containerfile
@@ -10,7 +10,7 @@
 
 # ==== base for all stages ====
 
-FROM debian:bookworm-slim AS base
+FROM debian:trixie-slim AS base
 LABEL stage=base
 
 LABEL maintainer="Sébastien Helleu <flashcode@flashtux.org>"
@@ -133,7 +133,7 @@ RUN set -eux ; \
         libcjson1 \
         libcurl3-gnutls \
         libgcrypt20 \
-        libgnutls30 \
+        libgnutls30t64 \
         libncursesw6 \
         libzstd1 \
         locales \
@@ -147,10 +147,10 @@ RUN set -eux ; \
             guile-3.0-libs \
             libaspell15 \
             liblua5.3-0 \
-            libperl5.36 \
+            libperl5.40 \
             libphp-embed \
-            libpython3.11 \
-            libruby3.1 \
+            libpython3.13 \
+            libruby3.3 \
             libtcl8.6 \
         ; \
     fi ; \
